--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
                             </button>
                         </div>`;
                     } else {
+                        // CHANGE HERE: Changed flex-col to flex items-center
                         html += `
                         <div class="mt-0.5 shrink-0" onclick="toggleEntryStatus('${entry.id}')">
                             ${getStatusIconHtml(entry.id, entry.type, entry.status)}
@@ -406,7 +407,7 @@
                                 ${entry.text}
                             </p>
                         </div>
-                        <div class="flex flex-col gap-1 pl-2">
+                        <div class="flex items-center gap-1 pl-2">
                             <button onclick="toggleImportance(event, '${entry.id}')" class="p-2 rounded-full transition-colors ${isImportant ? 'text-yellow-400' : 'text-slate-600'}">
                                 <i data-lucide="star" class="w-5 h-5 ${isImportant ? 'fill-yellow-500' : ''}"></i>
                             </button>
